# ppanel-backend

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.yaml
crates/email/: Cargo.toml
crates/email/src/: lib.rs  manager.rs  platform.rs  sender.rs  smtp.rs  template.rs  worker.rs
crates/ip/: Cargo.toml
crates/ip/src/: lib.rs
crates/jwt/: Cargo.toml
crates/jwt/src/: lib.rs
crates/migrate/: Cargo.toml  build.rs
crates/migrate/examples/: test_migrate.rs
crates/migrate/go/: go.mod  go.sum
crates/migrate/go/cmd/migrate/: main.go
crates/migrate/go/migrate/: migrate.go
crates/migrate/go/r2g/: gen.go  impl.go
crates/migrate/src/: idl.rs  lib.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: config.rs  error.rs  lib.rs  telegram.rs
crates/password/: Cargo.toml
crates/password/src/: lib.rs
crates/payment/: Cargo.toml
crates/payment/src/: alipay.rs  epay.rs  error.rs  lib.rs  platform.rs  stripe.rs  types.rs
crates/result/: Cargo.toml
crates/result/src/: code_error.rs  error_code.rs  http_result.rs  lib.rs
crates/sms/: Cargo.toml
crates/sms/src/: config.rs  factory.rs  lib.rs  platform.rs  sender.rs
crates/sms/src/providers/: abosend.rs  alibabacloud.rs  mod.rs  smsbao.rs  twilio.rs
crates/turnstile/: Cargo.toml
crates/turnstile/src/: lib.rs
migrations/mysql/: 00001_init_schema.sql  00002_init_basic_data.sql  02003_update_payment.sql  02004_rebuild_rule.sql  02005_device_online_record.sql  02006_reset_subscribe_record.sql  02007_adapte_rule.sql  02100_task.sql  02101_subscribe_application.sql  02102_subscribe_config.sql  02103_delete_application.sql  02104_system_log.sql  02105_node.sql  02106_subscribe.sql  02107_log_setting.sql  02108_user_referral.sql  02109_node_sort.sql  02110_traffic_log_index.sql  02111_clear_table.sql  02112_subscribe.sql  02113_task.sql  02114_node_config.sql  02115_ads.sql  02116_user_algo.sql  02117_site_custom_data.sql  02118_traffic_log_idx.sql  02119_user_subscribe_note.sql  02120_user_rules.sql  02121_user_withdrawal.sql  02122_server.sql  02123_subscribe_original.sql  02124_server_group_delete.sql  02125_subscribe_stock.sql  02126_system_log_idx.sql  02127_search_indexes.sql  02128_server_config_override.sql  02129_payment_sort.sql  02130_subscribe_tutorial.sql  02131_timestamptz_last_reported_at.sql
migrations/postgres/: 00001_init_schema.sql  00002_init_basic_data.sql  02003_update_payment.sql  02004_rebuild_rule.sql  02005_device_online_record.sql  02006_reset_subscribe_record.sql  02007_adapte_rule.sql  02100_task.sql  02101_subscribe_application.sql  02102_subscribe_config.sql  02103_delete_application.sql  02104_system_log.sql  02105_node.sql  02106_subscribe.sql  02107_log_setting.sql  02108_user_referral.sql  02109_node_sort.sql  02110_traffic_log_index.sql  02111_clear_table.sql  02112_subscribe.sql  02113_task.sql  02114_node_config.sql  02115_ads.sql  02116_user_algo.sql  02117_site_custom_data.sql  02118_traffic_log_idx.sql  02119_user_subscribe_note.sql  02120_user_rules.sql  02121_user_withdrawal.sql  02122_server.sql  02123_subscribe_original.sql  02124_server_group_delete.sql  02125_subscribe_stock.sql  02126_system_log_idx.sql  02127_search_indexes.sql  02128_server_config_override.sql  02129_payment_sort.sql  02130_subscribe_tutorial.sql  02131_timestamptz_last_reported_at.sql
src/: cache.rs  db.rs  exchange_rate.rs  main.rs  migration.rs  tracing_otel.rs
src/adapter/: mod.rs
src/config/: cache_key.rs  mod.rs  protocol.rs
src/handler/: mod.rs  routes.rs  subscribe.rs  telegram.rs
src/handler/admin/: mod.rs
src/handler/auth/: check_user_handler.rs  check_user_telephone_handler.rs  device_login_handler.rs  mod.rs  reset_password_handler.rs  telephone_login_handler.rs  telephone_reset_password_handler.rs  telephone_user_register_handler.rs  user_login_handler.rs  user_register_handler.rs
src/handler/common/: check_verification_code_handler.rs  get_ads_handler.rs  get_client_handler.rs  get_global_config_handler.rs  get_privacy_policy_handler.rs  get_stat_handler.rs  get_tos_handler.rs  heartbeat_handler.rs  mod.rs  send_email_code_handler.rs  send_sms_code_handler.rs
src/handler/notify/: mod.rs  payment_notify_handler.rs
src/middleware/: auth_middleware.rs  cors_middleware.rs  device_middleware.rs  logger_middleware.rs  mod.rs  notify_middleware.rs  pan_domain_middleware.rs  rate_limit_middleware.rs  server_middleware.rs  trace_middleware.rs
src/model/: mod.rs
src/queue/: client.rs  mod.rs  types.rs
src/repository/: mod.rs
src/scheduler/: mod.rs
src/service/: mod.rs  telemetry.rs
tools/migrate/: go.mod  go.sum
tools/mysql2postgres/: Cargo.toml
tools/mysql2postgres/src/: main.rs
(+690 files in other folders)
