[package]
name = "email"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11", default-features = false, features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
