[package]
name = "payment"
version = "0.1.0"
edition = "2021"

[dependencies]
alipay_sdk_rust = "1"
stripe = { version = "0.40", package = "async-stripe", features = ["runtime-tokio-hyper"] }
md5 = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tracing = "0.1"
url = "2"
