[package]
name = "sms"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
chrono = "0.4"
