[package]
name = "mysql2postgres"
version = "0.1.0"
edition = "2021"
description = "Copy data from MySQL to PostgreSQL for ppanel-backend migrations"

[[bin]]
name = "mysql2postgres"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "mysql", "postgres", "chrono", "any"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
